# Fraud_news_detector_langgraph_multiagents

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_ui.sh  setup.py
src/: __init__.py
src/agents/: __init__.py  cross_reference.py  evidence_gatherer.py  logical_analyzer.py  registry.py  sentiment_analyzer.py  source_scorer.py  supervisor.py  triage_manager.py  verdict_synthesizer.py
src/config/: __init__.py  config.py
src/core/: __init__.py  base_agent.py  exceptions.py  state.py
src/integrations/: __init__.py  llama3_client.py
src/utils/: __init__.py  logger.py  validators.py
src/workflow/: __init__.py  orchestrator.py
